[package]
name = "kvs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v7"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
clap = "4.5.40"
walkdir = "2.5.0"
tempfile = "3.20.0"
